# AI_agents_practice_templates

./: README.md
Langgraph_agents/: .gitignore
Langgraph_agents/Agentic_RAG_agent/: README.md  main.py  pyproject.toml  retriever.py
Langgraph_agents/Agentic_RAG_agent/.cursor/rules/: langgraph_agent_rules.md
Langgraph_agents/Agentic_RAG_agent/tools/: hub_stat_tool.py  search_tool.py  weather_tool.py
